k8s/demo-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: default
  labels:
    app: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      volumes:
      - name: data 
        emptyDir: {}

      containers:
      - name: demo-app
        image: 979559056307.dkr.ecr.ap-southeast-1.amazonaws.com/aldred/demo-devops-app:v0
        imagePullPolicy: Always
        command: ["gunicorn"]
        args: ["--bind", "0.0.0.0:18080", "main:app"]
        ports:
        - containerPort: 18080
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      affinity:
        podAntiAffinity:


          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - demo-app
            topologyKey: failure-domain.beta.kubernetes.io/zone
