k8s/demo-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0e6517e100dce519e, subnet-0b3da6b47b8cbfaae
    alb.ingress.kubernetes.io/tags: owner=aldred.halim,OwnerContact=aldred.halim@mongodb.com,no-reap=true,purpose=other,expire-on=2030-12-31
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: demo-app1-ald.mongosa.net
spec:
  ingressClassName: "alb"
  rules:
    - host: demo-app1-ald.mongosa.net
      http:
        paths:
          - backend:
              service:
                name: demo-app
                port:
                  name: http # should match port name in service
            path: /
            pathType: Prefix
